--- a/resources/css/index.scss
+++ b/resources/css/index.scss
@@ -1,3 +1,5 @@
-* {
-  font-family: sans-serif;
+@import '../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
+
+.listContent {
+  margin-top: 25px;
 }
