--- a/resources/views/index.hbs
+++ b/resources/views/index.hbs
@@ -12,7 +12,7 @@
 
 <body>
 
-  <main id="root"></main>
+  <main id="root" class="container"></main>
 
   <script type="application/javascript" src="/app.js"></script>
 </body>
