--- a/resources/views/index.hbs
+++ b/resources/views/index.hbs
@@ -14,6 +14,8 @@
 
   <main id="root" class="container"></main>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"
+    integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
   <script type="application/javascript" src="/app.js"></script>
 </body>
 
