delete directory in right click context menu

--- a/public/app.css
+++ b/public/app.css
@@ -5788,3 +5788,10 @@ button.close {
 
 .listContent {
   margin-top: 25px; }
+
+.show {
+  z-index: 1000;
+  position: absolute; }
+
+.dropdown {
+  position: absolute; }
