--- a/resources/css/index.scss
+++ b/resources/css/index.scss
@@ -12,3 +12,23 @@
 .dropdown {
   position: absolute;
 }
+
+#uploadFile {
+  .fileUpload {
+    position: relative;
+    overflow: hidden;
+    margin: 0px;
+
+    input {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      margin: 0;
+      padding: 0;
+      cursor: pointer;
+      opacity: 0;
+      filter: alpha(opacity=0);
+    }
+  }
+}
