--- a/resources/views/index.hbs
+++ b/resources/views/index.hbs
@@ -26,7 +26,12 @@
   <div class="dropdown" id="rmenu2">
     <ul class="dropdown-menu" id="my-menu2" role="menu" aria-labelledby="menu1">
       <li>
-        <a href="#" id="uploadFile"><i class="fa fa-upload"></i> Subir archivo</a>
+        <a href="#" id="uploadFile">
+          <div id="fileName" class="fileUpload">
+            <span><i class="fa fa-upload"></i> Subir archivo</span>
+            <input type="file" name="files" id="filesSystem" class="upload" multiple="" />
+          </div>
+        </a>
       </li>
     </ul>
   </div>
