Directories and files
* Delete directories and files
* Rename directory
* Download files

--- a/resources/views/index.hbs
+++ b/resources/views/index.hbs
@@ -28,10 +28,18 @@
       <li>
         <a href="#" id="uploadFile">
           <div id="fileName" class="fileUpload">
-            <span><i class="fa fa-upload"></i> Subir archivo</span>
-            <input type="file" name="files" id="filesSystem" class="upload" multiple="" />
+
           </div>
         </a>
+      </li>
+    </ul>
+  </div>
+
+  <div class="dropdown" id="rmenu3">
+    <ul class="dropdown-menu" id="my-menu3" role="menu" aria-labelledby="menu1">
+      <li>
+        <a href="#" id="deleteFile"><i class="fa fa-trash"></i> Borrar archivo</a>
+        <a href="#" id="downloadFile"><i class="fa fa-download"></i> Descargar</a>
       </li>
     </ul>
   </div>
