--- a/public/app.css
+++ b/public/app.css
@@ -5810,3 +5810,7 @@ button.close {
     cursor: pointer;
     opacity: 0;
     filter: alpha(opacity=0); }
+
+.fileStyleList:hover {
+  cursor: default;
+  color: skyblue; }
